@@ -1,16 +1,16 @@
-.synopsis, .classsynopsis 
+.synopsis, .classsynopsis
 {
   background: #eeeeee;
   border: solid 1px #aaaaaa;
   padding: 0.5em;
 }
-.programlisting 
+.programlisting
 {
   background: #eeeeff;
   border: solid 1px #aaaaff;
   padding: 0.5em;
 }
-.variablelist 
+.variablelist
 {
   padding: 4px;
   margin-left: 3em;
@@ -19,62 +19,84 @@
 {
   vertical-align: top;
 }
+
 /* this is needed so that the local anchors are displayed below the naviagtion */
-div.refnamediv a[name], div.refsect1 a[name]
-{
-  position: relative;
-  top: -4.5em;
+@media screen {
+  div.refnamediv a[name], div.refsect1 a[name]
+  {
+    position: relative;
+    top: -4.5em;
+  }
+  table.navigation#top
+  {
+    background: #ffeeee;
+    border: solid 1px #ffaaaa;
+    margin-top: 0;
+    margin-bottom: 0;
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 2em;
+    z-index: 1;
+  }
+  .navigation a
+  {
+    color: #770000;
+  }
+  .navigation a:visited
+  {
+    color: #550000;
+  }
+  td.shortcuts
+  {
+    color: #770000;
+    font-size: 80%;
+  }
+  div.refentry, div.chapter, div.reference, div.part, div.book, div.index, div.glossary, div.sect1, div.appendix, div.preface
+  {
+    position: relative;
+    top: 3em;
+    z-index: 0;
+  }
+  div.refnamediv
+  {
+    margin-top: 2em;
+  }
 }
-table.navigation#top
-{
-  background: #ffeeee;
-  border: solid 1px #ffaaaa;
-  margin-top: 0;
-  margin-bottom: 0;
-  position: fixed;
-  top: 0;
-  left: 0;
-  height: 2em;
-  z-index: 1;
+@media print {
+  table.navigation {
+    visibility: collapse;
+    display: none;
+  }
+  div.titlepage table.navigation {
+    visibility: visible;
+    display: table;
+    background: #ffeeee;
+    border: solid 1px #ffaaaa;
+    margin-top: 0;
+    margin-bottom: 0;
+    top: 0;
+    left: 0;
+    height: 2em;
+  }
 }
-.navigation a 
-{
-  color: #770000;
-}
-.navigation a:visited 
-{
-  color: #550000;
-}
-.navigation .title 
+
+.navigation .title
 {
   font-size: 200%;
 }
-td.shortcuts
-{
-  color: #770000;
-  font-size: 80%;
-}
 
-div.refentry, div.chapter, div.reference, div.part, div.book, div.index, div.glossary, div.sect1, div.appendix, div.preface
-{
-  position: relative;
-  top: 3em;
-  z-index: 0;
-}
-div.refnamediv 
-{
-  margin-top: 2em;
-}
-div.gallery-float 
+
+div.gallery-float
 {
   float: left;
   padding: 10px;
 }
-div.gallery-float img 
+div.gallery-float img
 {
   border-style: none;
 }
-div.gallery-spacer 
+div.gallery-spacer
 {
   clear: both;
 }
