@@ -1,5 +1,10 @@
 2007-08-11  Stefan Kost  <ensonic@users.sf.net>
 
+	* style.css:
+	  Hide fixed navigationbar when printing. Fixes #449618
+
+2007-08-11  Stefan Kost  <ensonic@users.sf.net>
+
 	* gtk-doc.notmpl.make:
 	  Add new makefile for tmpl-less build.
 
